welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:6: error: ')' expected but integer literal found.
 while(j- <4){
           ^MethodsDogHouse:54: error: illegal start of simple expression
}
^